# --
# CHANGES - change log of OTRS
# Copyright (C) 2001-2009 OTRS AG, http://otrs.org/
# --
# $Id: CHANGES,v 1.993.2.85 2009/12/30 12:38:43 martin Exp $
# --
# This software comes with ABSOLUTELY NO WARRANTY. For details, see
# the enclosed file COPYING for license information (AGPL). If you
# did not receive this file, see http://www.gnu.org/licenses/agpl.txt.
# --

2.4.6 (2009/??/??)
 - (2009/12/30) Added Ukrainian language translation, thanks to Belskii Artem!
 - (2009/12/30) Added proper removal of FormID in AgentTicketPhoneOutbound.
 - (2009/12/23) Fixed bug#3526 - Escalation emails are resent over and over again.
 - (2009/12/23) Fixed bug#4428 - PGP-inline signed messages can't be encoded
    correctly with rich text editor.
 - (2009/12/22) Fixed bug#4690 - AdminMailAccount - only 50 characters can be
    entered in username, password and host fields while database can store 200.
 - (2009/12/16) Fixed bug#4503 - Border around image does not display well
    in some email clients.
 - (2009/12/13) Fixed bug#4393 - AgentTicketQueue - Small view takes long to load.
 - (2009/12/09) Fixed crash in Ascii2Html() if no scalar reference is given.
 - (2009/12/09) Fixed bug#4551 - GenericAgent appends leading zeros to dates
    if TimeInputFormat is "Input".
 - (2009/12/09) Fixed bug#4584 - Auto response does not use selected from e-mail
    address.
 - (2009/12/09) Fixed bug#4435 - Inline attachments break in some scenarios like
    AgentTicketCompose and AgentTicketForward.
 - (2009/12/09) Fixed bug#4556 - Translation "Accounted Time" to german "Zugewiesene Zeit".
 - (2009/12/09) Fixed bug#4184 - Can't call method "NotificationGet" on
    an undefined value.
 - (2009/12/09) Fixed bug#4371 - DataSelected value for config option
    PreferencesGroups###WatcherNotify doesn't work.
 - (2009/12/09) Fixed bug#4486 - Some preferences displayed in AdminUser are not correct.
 - (2009/12/09) Fixed bug#4363 - Kernel/Output/HTML/Layout.pm -> PageNavBar()